# Flag_Prediction_Project

./: .gitignore  Conda_Environment_Setup.md  Dockerfile  README.md  cuda_check.py  data  label_encoder.pkl  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg
src/: __init__.py  cli.py  config.py  data_collection.py  data_utils.py  gui.py  image_processing.py  main.py  model.py  predict.py  train.py
tests/: __init__.py  conftest.py  test_cli.py  test_data_collection.py  test_data_utils.py  test_image_processing.py  test_model.py  test_predict.py  test_train.py
